{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 20,
  "lineage": "6bd9d0c7-a5c6-6988-eb1e-d4b7937ddd36",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b2423b1af432edb",
            "arn": "arn:aws:ec2:us-east-2:043925558327:instance/i-0ab28b55cb8ad1685",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab28b55cb8ad1685",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mkloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-023f16bf272a525f0",
            "private_dns": "ip-30-0-1-187.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.0.1.187",
            "public_ip": "3.17.66.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-086067840cd23deae",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "sg-00375b54e23f0121a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a2f2d111230451c5",
            "tags": {
              "Name": "ha-app-web-server-1"
            },
            "tags_all": {
              "Name": "ha-app-web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00375b54e23f0121a"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.amzn_linux",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b2423b1af432edb",
            "arn": "arn:aws:ec2:us-east-2:043925558327:instance/i-09e355f1596a08cb4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e355f1596a08cb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mkloud-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0abc00db1ac79ac4c",
            "private_dns": "ip-30-0-2-61.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.0.2.61",
            "public_ip": "52.15.91.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-07320a8231692bd26",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "sg-00375b54e23f0121a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06779f50313aef53d",
            "tags": {
              "Name": "ha-app-web-server-2"
            },
            "tags_all": {
              "Name": "ha-app-web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00375b54e23f0121a"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.amzn_linux",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:043925558327:internet-gateway/igw-03f6a421eff4edb79",
            "id": "igw-03f6a421eff4edb79",
            "owner_id": "043925558327",
            "tags": {
              "Name": "ha-app-igw"
            },
            "tags_all": {
              "Name": "ha-app-igw"
            },
            "vpc_id": "vpc-07cefa6a320eef3f5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:043925558327:loadbalancer/app/ha-app-alb/973e2b37a98e6d77",
            "arn_suffix": "app/ha-app-alb/973e2b37a98e6d77",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ha-app-alb-2027066133.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:043925558327:loadbalancer/app/ha-app-alb/973e2b37a98e6d77",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ha-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0960602378190a921"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06779f50313aef53d"
              },
              {
                "subnet_id": "subnet-0a2f2d111230451c5"
              }
            ],
            "subnets": [
              "subnet-06779f50313aef53d",
              "subnet-0a2f2d111230451c5"
            ],
            "vpc_id": "vpc-07cefa6a320eef3f5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:043925558327:listener/app/ha-app-alb/973e2b37a98e6d77/2842f87ee76a2878",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:043925558327:targetgroup/ha-app-tg/714a31a82f6cd9d6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:043925558327:listener/app/ha-app-alb/973e2b37a98e6d77/2842f87ee76a2878",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:043925558327:loadbalancer/app/ha-app-alb/973e2b37a98e6d77",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:043925558327:targetgroup/ha-app-tg/714a31a82f6cd9d6",
            "arn_suffix": "targetgroup/ha-app-tg/714a31a82f6cd9d6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:043925558327:targetgroup/ha-app-tg/714a31a82f6cd9d6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ha-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07cefa6a320eef3f5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:043925558327:targetgroup/ha-app-tg/714a31a82f6cd9d6-20240323042614501200000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:043925558327:targetgroup/ha-app-tg/714a31a82f6cd9d6",
            "target_id": "i-0ab28b55cb8ad1685"
          },
          "dependencies": [
            "aws_instance.web_servers",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.amzn_linux",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:043925558327:targetgroup/ha-app-tg/714a31a82f6cd9d6-20240323042614597000000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:043925558327:targetgroup/ha-app-tg/714a31a82f6cd9d6",
            "target_id": "i-09e355f1596a08cb4"
          },
          "dependencies": [
            "aws_instance.web_servers",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_ami.amzn_linux",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:043925558327:route-table/rtb-02df1dd7ac7787279",
            "id": "rtb-02df1dd7ac7787279",
            "owner_id": "043925558327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f6a421eff4edb79",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ha-app-public-rt"
            },
            "tags_all": {
              "Name": "ha-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cefa6a320eef3f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02cf56fd993ce9586",
            "route_table_id": "rtb-02df1dd7ac7787279",
            "subnet_id": "subnet-0a2f2d111230451c5"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dc8947b9a182d1b",
            "route_table_id": "rtb-02df1dd7ac7787279",
            "subnet_id": "subnet-06779f50313aef53d"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:043925558327:security-group/sg-0960602378190a921",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0960602378190a921",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "043925558327",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha-app-alb-sg"
            },
            "tags_all": {
              "Name": "ha-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cefa6a320eef3f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:043925558327:security-group/sg-00375b54e23f0121a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00375b54e23f0121a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0960602378190a921"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "043925558327",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha-app-web-sg"
            },
            "tags_all": {
              "Name": "ha-app-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07cefa6a320eef3f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:043925558327:subnet/subnet-0bcfbdeda0dfc9f25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "30.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcfbdeda0dfc9f25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043925558327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-app-private-subnet-1"
            },
            "tags_all": {
              "Name": "ha-app-private-subnet-1"
            },
            "vpc_id": "vpc-07cefa6a320eef3f5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:043925558327:subnet/subnet-00acdcac3d8570a82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "30.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00acdcac3d8570a82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043925558327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-app-private-subnet-2"
            },
            "tags_all": {
              "Name": "ha-app-private-subnet-2"
            },
            "vpc_id": "vpc-07cefa6a320eef3f5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:043925558327:subnet/subnet-0a2f2d111230451c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2f2d111230451c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043925558327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-app-public-subnet-1"
            },
            "tags_all": {
              "Name": "ha-app-public-subnet-1"
            },
            "vpc_id": "vpc-07cefa6a320eef3f5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:043925558327:subnet/subnet-06779f50313aef53d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06779f50313aef53d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043925558327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-app-public-subnet-2"
            },
            "tags_all": {
              "Name": "ha-app-public-subnet-2"
            },
            "vpc_id": "vpc-07cefa6a320eef3f5"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:043925558327:vpc/vpc-07cefa6a320eef3f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-0e4520503a2cc9bfb",
            "default_route_table_id": "rtb-0f01cba677e6ca0c4",
            "default_security_group_id": "sg-04701b222ca287d1c",
            "dhcp_options_id": "dopt-0031938facf73bcb3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07cefa6a320eef3f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f01cba677e6ca0c4",
            "owner_id": "043925558327",
            "tags": {
              "Name": "ha-app-vpc"
            },
            "tags_all": {
              "Name": "ha-app-vpc"
            }
          }
        }
      ]
    }
  ]
}